cabal-version:       >=1.10
name:                funeq
version:             0.1
synopsis:            Easy-to-slurp package for testing equality of functions on repl.it.
description:         This package is meant for use with the website repl.it while volunteering
                     with 2nd-graders, teaching them about functions.
license:             BSD3
license-file:        LICENSE
author:              Richard Eisenberg
maintainer:          rae@richarde.dev
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     All
  other-modules:            
        Test.QuickCheck
        Test.QuickCheck.All
        Test.QuickCheck.Arbitrary
        Test.QuickCheck.Exception
        Test.QuickCheck.Features
        Test.QuickCheck.Function
        Test.QuickCheck.Gen
        Test.QuickCheck.Gen.Unsafe
        Test.QuickCheck.Modifiers
        Test.QuickCheck.Poly
        Test.QuickCheck.Property
        Test.QuickCheck.Random
        Test.QuickCheck.State
        Test.QuickCheck.Test
        Test.QuickCheck.Text
        System.Random
        Data.Number.Erf
  build-depends:       base==4.*
                     , time >= 1.8
                     , transformers >= 0.5
                     , containers >= 0.6
                     , deepseq >= 1.4
                     , template-haskell >= 2.14
  default-language:    Haskell2010
